fixed alignment of content

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,8 @@ html {
 body {
     min-height: 100%;
     display: grid;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: auto 1fr auto;
+    align-items: start;
 }
 
 .navbar-fixed {
@@ -17,6 +18,7 @@ body>.container {
     grid-row-start: 2;
     grid-row-end: 3;
     padding-bottom: 20px;
+    justify-self: start;
 }
 
 .page-footer {
